get tag helpers working for routing

--- a/TheWorld/Views/App/Index.cshtml
+++ b/TheWorld/Views/App/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Index Page";
+    ViewBag.Color = "red";
 }
 
-<h1>Home Page!</h1>
+<h1 style="color: @ViewBag.color">@ViewBag.Title</h1>
