--- a/TheWorld/Views/Shared/_Layout.cshtml
+++ b/TheWorld/Views/Shared/_Layout.cshtml
@@ -2,9 +2,19 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <script src="~/js/index.js"></script>
+        <link rel="stylesheet" href="~/css/index.css" />
         <title>@ViewBag.Title</title>
     </head>
     <body>
+        <header>
+            <ul>
+                <li><a asp-controller="App" asp-action="Index">Home</a></li>
+                <li><a asp-controller="App" asp-action="About">About</a></li>
+                <li><a asp-controller="App" asp-action="Contact">Contact</a></li>
+            </ul>
+        </header>
         @RenderBody()
     </body>
 </html>
+
