--- a/TheWorld/Views/App/Contact.cshtml
+++ b/TheWorld/Views/App/Contact.cshtml
@@ -12,6 +12,10 @@
 <div class="contact__form-container">
     <h2>Contact Me</h2>
     <form method="POST">
+        @if (ViewBag.UserMessage != null)
+        {
+            <div>@ViewBag.UserMessage</div>
+        }
         <span asp-validation-summary="ModelOnly"></span>
         <label asp-for="Name"></label>
         <input asp-for="Name" type="text">
